fix: #103 修复列表脑图视图辅助线错位问题 | Fixed the issue of misalignment of guides in the brain map view of the list.

--- a/style/module/custom-type-map.less
+++ b/style/module/custom-type-map.less
@@ -18,7 +18,7 @@
     // height: calc(50% - var(--custom-list-guides-line-width) / 2);
     height: @height;
     border-left: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
-    width: 2em;
+    width: calc(2em - var(--custom-list-guides-line-width));
 }
 
 .protyle-content {
@@ -82,7 +82,7 @@
                     >div.protyle-action {
                         /* 无序列表标志 */
                         top: calc(50%);
-                        left: calc(2em - 16px);
+                        left: calc(2em - 20px);
                     }
                 }
 
@@ -145,13 +145,22 @@
                         align-items: center;
                         display: flex;
 
-                        // 文字框
-                        >[contenteditable][spellcheck],
-                        // 公式块
-                        .katex-display {
-                            outline: 1px solid var(--b3-theme-on-surface);
-                            border-radius: var(--custom-border-radius);
+                        &:is(.p) {
+                            /* 段落块内边距为 0 */
+                            padding: 0;
                         }
+
+                        /* 叶子节点的轮廓 */
+                        outline: 1px solid var(--b3-theme-on-surface);
+                        border-radius: var(--custom-border-radius);
+
+                        // // 文字框
+                        // >[contenteditable][spellcheck],
+                        // // 公式块
+                        // .katex-display {
+                        //     outline: 1px solid var(--b3-theme-on-surface);
+                        //     border-radius: var(--custom-border-radius);
+                        // }
 
                         // 文字框
                         >[contenteditable][spellcheck] {
@@ -188,7 +197,7 @@
                     position: absolute;
                     left: -1em;
                     top: @height;
-                    border-top: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
+                    border-bottom: var(--custom-list-guides-line-width) solid var(--b3-theme-on-surface);
                     width: 2em;
                     height: 0;
                 }
